Fix testsuite